Update to 26.1 and Modfest standards